--- a/index.html
+++ b/index.html
@@ -64,9 +64,14 @@
         </div>
         <div id="textChangingColorContainer" style="width:100%;height:100vh;background: black;display: flex;justify-content: center;align-items: center;">
           <div id="textChangingColor" style="width: 100%;height: 100%;background-image: url(./asset/gradientBackground.png);display: flex;justify-content: center;align-items: center;-webkit-text-fill-color: transparent;-webkit-background-clip: text;
-            ;font-weight: bold">
+            ;font-weight: bold;font-size: 60px;background-image: url(./asset/gradientBackground.png);">
             <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus, quia. Eligendi perspiciatis maxime nobis distinctio? At beatae eveniet, fugiat soluta cupiditate perferendis reiciendis, quis non repellat aut, voluptates iure omnis!</p>
             </div>
+          </div>
+          <div style="text-align: center;width:100%;height: 100vh;position: relative;background: url(./asset/gradientBackground.png);" id="proBeyondTextContainer">
+            <h1 style="color: black;font-size: 148px;">Pro.</h1>
+            <br/>
+            <h1 style="color: black;font-size: 148px;">Beyond.</h1>
           </div>
         </div>
       </div>
