today's work is done

--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
           <img src="./asset/iphone14text.png" />
         </div>
         <div id="twoIphoneContainer">
-          <!-- <div id="battery">
+          <div id="battery">
             <div style="width: 150px; height: 50px">
               <div
                 style="background: #5bc236; width: 100%; height: 100%;"
                 id="batteryColorFiller"></div>
             </div>
             <h1>Our longest battery life ever.</h1>
-          </div> -->
+          </div>
           <div
             style="
               position: absolute;
